--- a/fr/musique_fr.html
+++ b/fr/musique_fr.html
@@ -10,15 +10,20 @@
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
-    <header>
-        <a class="home-header"href="../index.html">
-            <img src="../public/icone/home.svg" alt="Icône du bouton home">
+    <header class="header_fr_2">
+        <div class="element_header_fr">
+            <a class="home_header_fr" href="/index.html">
+                <img src="/public/icone/home.svg" alt="Icône du bouton home">
+            </a>
+            <div class="nav_toogle" onclick="document.documentElement.classList.toggle('menu_fr_open')">
+                <div class="nav_toogle_bar"></div>
+            </div>
+        </div>
+        <a class="language_header_fr" href="./en/index_en.html">
+            <img src="/public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
-        <img class="menu-header" src="../public/icone/bouton_menu.svg" alt="Icône du bouton menu">
-        <a class="language-header"href="../en/index_en.html">
-            <img src="../public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
-        </a>
-        <img class="btb-header" src="../public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
+        <h2 class="btb_header_fr">Back To Back</h2>
+
         <div class="element-header">
             <div class="element-header-image">
                 <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
@@ -27,36 +32,55 @@
                 <h1 class="h1-header">Legends never die</h1>
             </div>
         </div>
+
+        <nav class="menu_fr">
+            <ul>
+                <li><a href="/fr/film_fr.html">> Top Gun</a></li>
+                <li><a href="/fr/livre_fr.html">> État d'urgence</a></li>
+                <li><a href="/fr/musique_fr.html">> LND</a></li>
+                <li><a href="/fr/lieu_fr.html">> Besançon</a></li>
+                <li><a href="/fr/espoir_fr.html">> Sauver la planète</a></li>
+                <li><a href="/fr/regret_fr.html">> Le réchauffement climatique</a></li>
+                <li><a href="/fr/glossaire_fr.html">> Glossaire</a></li>
+                <li><a href="/fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="/fr/apropos_fr.html">> À propos</a></li>
+                <li><a href="/fr/contact_fr.html">> Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <p>De nombreuses musiques ont été créer afin de rendre hommage à des grands hommes et grandes femmes malheureusement décédés dans l’exercice de leur fonction ou tout simplement par vieillissement.</p>
-        <p>On peut citer par ex : la musique « See you Again » par Wiz Khalifa & Charlie Puth.</p>
-        <p>De base cette musique était la soundtrack de Fast and Furious 7 mais il s’avère finalement d’un hommage à Paul Walker mort accidentellement d’un accident de voiture pendant le tournage du 7e opus de la saga.</p>
-        <p>Revenons sur notre sujet,</p> 
-        <p>LDN c’est quoi ?</p>
+        <p class="musique_article_intro">De nombreuses musiques ont été créer afin de rendre hommage à des grands hommes et grandes femmes malheureusement décédés dans l’exercice de leur fonction ou tout simplement par vieillissement.</p>
+        <p class="musique_article_intro">On peut citer par ex : la musique « See you Again » par Wiz Khalifa & Charlie Puth.</p>
+        <p class="musique_article_intro">De base cette musique était la soundtrack de Fast and Furious 7 mais il s’avère finalement d’un hommage à Paul Walker mort accidentellement d’un accident de voiture pendant le tournage du 7e opus de la saga.</p>
+        <p class="musique_article_intro">Revenons sur notre sujet,</p> 
+        <p class="musique_article_intro">LND c’est quoi ?</p>
         <img src="../public/img/musique_legends_1.webp" alt="Image Musique Legends nerver die">
 
         <article>
-            <h3>LND, c'est quoi ?</h3>
-            <p>C'est avant tout une abréviation de la chason originale qui porte le nom de "Legends Never Die" en francais, "Les légendes ne meurent jamais".</p>
-            <p>Celle-ci a été écrite par la Team Riot Games Music, Alex Seaver of Mako, Oliver. Elle est aussi en collaboration avec l'artiste portant le nom de Against The Current.</p>
-            <p>A l'origine, cette chanson a été utiliser comme chanson officielle pour les championnats du monde de la saison 2017 du jeu League of Legends.</p>
-            <p>
+            <h3 class="musique_article_texte_tittle">LND, c'est quoi ?</h3>
+            <p class="musique_article_texte_content">C'est avant tout une abréviation de la chason originale qui porte le nom de "Legends Never Die" en francais, "Les légendes ne meurent jamais".</p>
+            <p class="musique_article_texte_content">Celle-ci a été écrite par la <strong>Riot Games Music, Alex Seaver of Mako, Oliver.</strong> Elle est aussi en collaboration avec l'artiste portant le nom de <strong>Against The Current.</strong></p>
+            <p class="musique_article_texte_content">A l'origine, cette chanson a été utiliser comme chanson officielle pour les championnats du monde de la <strong>saison 2017</strong> du jeu <strong>League of Legends.</strong></p>
+            <p class="musique_article_texte_content">
             Mais pour nous, elle signifie bien plus. Elle permet de se remémorer les moments passés avec des personnes, ou bien tout simplement un hommage pour les personnes qui ont lutté pour de grandes choses. 
             Cette musique nous montre bien plus grâce en particulier aux paroles fortes et émouvantes notamment : 
-            « Les légendes ne meurent jamais ».
+            <strong>« Les légendes ne meurent jamais ».</strong>
             </p>
-            <p>Les légendes qui sont des personnes fortes pour nous : amis / sœur / frère / famille / ou bien plus.</p>
-            <p>La musique est disponible à l’écoute à ce lien :</p>
+            <p class="musique_article_texte_content">Les légendes qui sont des personnes fortes pour nous : amis / sœur / frère / famille / ou bien plus.</p>
+            <p class="musique_article_texte_content">La musique est disponible à l’écoute à ce lien :</p>
+            <div class="musique_article_texte_link">
             <a href="https://www.youtube.com/watch?v=4Q46xYqUwZQ">https://www.youtube.com/watch?v=4Q46xYqUwZQ</a>
-            <p>Pour en revenir à l’utilisation de la chanson, elle est utilisée surtout autour de l’univers « League of Legends » mais c’est quoi ?</p>
+            </div>
+            <p class="musique_article_texte_content">Pour en revenir à l’utilisation de la chanson, elle est utilisée surtout autour de l’univers <strong>« League of Legends »</strong> mais c’est quoi ?</p>
             <img src="../public/img/Image_lol.webp" alt="Image League of Legends">
         </article>
         <article>
-            <h3>League of Legends</h3>
-            <p>A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développé par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemie. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
-            <p>Pour plus d’informations, le jeu est disponible à l’installation à ce lien :</p>
+            <h3 class="musique_article_texte_tittle">League of Legends</h3>
+            <p class="musique_article_texte_content">A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développé par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemie. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
+            <p class="musique_article_texte_content">Pour plus d’informations, le jeu est disponible à l’installation à ce lien :</p>
+            <div class="musique_article_texte_link">
             <a href="https://www.leagueoflegends.com/fr-fr/">https://www.leagueoflegends.com/fr-fr/</a>
+            </div>
         </article>
     </main>
     <footer>
