--- a/fr/lieu_fr.html
+++ b/fr/lieu_fr.html
@@ -10,15 +10,20 @@
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
-    <header>
-        <a class="home-header"href="../index.html">
-            <img src="../public/icone/home.svg" alt="Icône du bouton home">
+    <header class="header_fr_2">
+        <div class="element_header_fr">
+            <a class="home_header_fr" href="/index.html">
+                <img src="/public/icone/home.svg" alt="Icône du bouton home">
+            </a>
+            <div class="nav_toogle" onclick="document.documentElement.classList.toggle('menu_fr_open')">
+                <div class="nav_toogle_bar"></div>
+            </div>
+        </div>
+        <a class="language_header_fr" href="./en/index_en.html">
+            <img src="/public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
-        <img class="menu-header" src="../public/icone/bouton_menu.svg" alt="Icône du bouton menu">
-        <a class="language-header"href="../en/index_en.html">
-            <img src="../public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
-        </a>
-        <img class="btb-header" src="../public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
+        <h2 class="btb_header_fr">Back To Back</h2>
+
         <div class="element-header">
             <div class="element-header-image">
                 <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
@@ -27,38 +32,61 @@
                 <h1 class="h1-header">Besançon</h1>
             </div>
         </div>
+
+        <nav class="menu_fr">
+            <ul>
+                <li><a href="/fr/film_fr.html">> Top Gun</a></li>
+                <li><a href="/fr/livre_fr.html">> État d'urgence</a></li>
+                <li><a href="/fr/musique_fr.html">> LND</a></li>
+                <li><a href="/fr/lieu_fr.html">> Besançon</a></li>
+                <li><a href="/fr/espoir_fr.html">> Sauver la planète</a></li>
+                <li><a href="/fr/regret_fr.html">> Le réchauffement climatique</a></li>
+                <li><a href="/fr/glossaire_fr.html">> Glossaire</a></li>
+                <li><a href="/fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="/fr/apropos_fr.html">> À propos</a></li>
+                <li><a href="/fr/contact_fr.html">> Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <p>Parmi les villes, à l’échelle national, beaucoup sont celles qui commencent à réagir face au changement climatique en mettant en place de plus en plus d’infrastructure ou autre projet qui sont « environnement friendly » On peut citer comme ex, la ville de Paris qui met en avant l’utilisation du vélo par la création de piste cyclables favorisant donc le déplacement à vélo plutôt quand voiture et aussi afin de désengorger la ville de ses immenses embouteillages.</p>
-        <p>Parmi ses villes, l’une d’elle a retenu notre attention, c’est Besançon.</p>
+        <p class="lieu_article_intro">Parmi les villes, à l’échelle national, beaucoup sont celles qui commencent à réagir face au changement climatique en mettant en place de plus en plus d’infrastructure ou autre projet qui sont « environnement friendly » On peut citer comme ex, la ville de Paris qui met en avant l’utilisation du vélo par la création de piste cyclables favorisant donc le déplacement à vélo plutôt quand voiture et aussi afin de désengorger la ville de ses immenses embouteillages.</p>
+        <p class="lieu_article_intro">Parmi ses villes, l’une d’elle a retenu notre attention, c’est Besançon.</p>
         <img src="../public/img/BESAC_1.webp" alt="Photo de la ville de Besançon">
         
         <article>
-            <h3>Besançon, c'est quoi ?</h3>
-            <p>C’est la capitale du Doubs, un département de la région Bourgogne Franche-Comté anciennement la Franche-Comté seule. Besançon est une commune de 118 647 habitants, situé dans l’Est de la France. Elle est le siège de la région Bourgogne Franche-Comté. C’est aussi la capitale de la région historique et culturelle de Franche-Comté. Les habitants se prénomment les bisontins, « on est bisontin ou on ne l’est pas » c’est l’hymne qui rode entre les habitants.</p>
-            <p>On peut retrouver de nombreuses choses, notamment de grande salle de concert (La Rodia) ou encore des grands complexes d’expositions (Micropolis) ou sportifs (La Malcombe, Léo Lagrange)</p>
-            <p>Toutefois, si vous voulez visiter la ville, nous vous renvoyons vers le site web de Besançon :</p>
+            <h3 class="lieu_article_texte_tittle">Besançon, c'est quoi ?</h3>
+            <p class="lieu_article_texte_content">C’est la capitale du Doubs, un département de la région Bourgogne Franche-Comté anciennement la Franche-Comté seule. <strong>Besançon</strong> est une commune de <strong>118 647 habitants</strong>, situé dans l’Est de la France. Elle est le siège de la région Bourgogne Franche-Comté. C’est aussi la capitale de la région historique et culturelle de Franche-Comté. Les habitants se prénomment les bisontins, <strong>« on est bisontin ou on ne l’est pas »</strong> c’est l’hymne qui rode entre les habitants.</p>
+            <p class="lieu_article_texte_content">On peut retrouver de nombreuses choses, notamment de grande salle de concert (La Rodia) ou encore des grands complexes d’expositions (Micropolis) ou sportifs (La Malcombe, Léo Lagrange)</p>
+            <p class="lieu_article_texte_content">Toutefois, si vous voulez visiter la ville, nous vous renvoyons vers le site web de <strong>Besançon</strong></p>
+            <div class="lieu_article_texte_link">
             <a href="https://www.besancon.fr/">https://www.besancon.fr/</a>
-            <img src="../public/img/Besac_2.webp" alt="Photo de Besançon">
+            </div>
+            <img class="livre_article_image_secondary" src="../public/img/Besac_2.webp" alt="Photo de Besançon">
         </article>
         <article>
-            <h3>La ville au coeur de l'évolution</h3>
-            <p>L’évolution propre c’est l’une des politiques de la ville, cela provoque notamment un engagement important : environnement, biodiversité, énergie, climat, eau, déchets, mobilité…</p>
-            <p>De nombreuses idées & projets sont mis en place afin de montrer l’évolution propre aux autres villes On peut citer le commercer éco-engagé, le parcours écocitoyen mais aussi le développement durable des quartiers.</p>
-            <p>La ville met en place de nombreux moyens pour évoluer sans pour autant polluer plus ! Les gens ont compris les enjeux de leurs actions, parmi les choses mises en place, on retrouve les transports en communs. Des tramways, de nombreux bus ou encore des vélos sont mis en place dans la ville afin de réduire l’utilisation de la voiture et donc diminuer l’impact écologique.</p>
-            <p>Malheureusement, un trop grand nombre de villes ont tendance à laisser passer ce combat pour l’écologie, pour l’environnement, pour sauver la planète mais on retrouve quand même certaines villes qui fournissent des efforts et cela fait plaisir !</p>
+            <h3 class="lieu_article_texte_tittle">La ville au coeur de l'évolution</h3>
+            <p class="lieu_article_texte_content">L’évolution propre c’est l’une des politiques de la ville, cela provoque notamment un engagement important : <strong>environnement, biodiversité, énergie, climat, eau, déchets, mobilité…</strong></p>
+            <p class="lieu_article_texte_content">De nombreuses idées & projets sont mis en place afin de montrer l’évolution propre aux autres villes On peut citer le <strong>commerce éco-engagé, le parcours écocitoyen</strong> mais aussi le <strong>développement durable des quartiers.</strong></p>
+            <p class="lieu_article_texte_content">La ville met en place de nombreux moyens pour évoluer sans pour autant polluer plus ! Les gens ont compris les enjeux de leurs actions, parmi les choses mises en place, on retrouve les <strong>transports en communs.</strong> Des <strong>tramways,</strong> de nombreux <strong>bus</strong> ou encore des <strong>vélos</strong> sont mis en place dans la ville afin de réduire l’utilisation de la voiture et donc diminuer <strong>l’impact écologique.</strong></p>
+            <p class="lieu_article_texte_content">Malheureusement, un trop grand nombre de villes ont tendance à laisser passer ce combat pour l’écologie, pour l’environnement, pour sauver la planète mais on retrouve quand même certaines villes qui fournissent des efforts et cela fait plaisir !</p>
             <img src="../public/img/Citadelle_Besac.webp" alt="Photo de la citadelle de Besançon">
         </article>
         <article>
-            <h3>Frise des lieux similaires</h3>
-            <p>Les différentes villes sont affichées ci-dessous sous forme de frise.</p>
-            <img src="../public/img/Frise.webp" alt="Frise des différentes villes similaires à Besançon">
+            <h3 class="lieu_article_texte_tittle">Frise des lieux similaires</h3>
+            <p class="lieu_article_texte_content_italic">Les différentes villes sont affichées ci-dessous sous forme de frise.</p>
+            <img class="lieu_article_image_frise" src="../public/img/Frise.webp" alt="Frise des différentes villes similaires à Besançon">
         </article>
         <article>
-            <h3>Pour plus d'informations,</h3>
-            <p>Classements des villes vertes en France :</p>
+            <h3 class="lieu_article_texte_tittle">Pour plus d'informations,</h3>
+            <p class="lieu_article_texte_content">Classements des villes vertes en France :</p>
+            <div class="lieu_article_texte_link">
             <a href="https://www.detoursenfrance.fr/patrimoine/patrimoine-urbain/le-classement-des-villes-vertes-en-france-8111">https://www.detoursenfrance.fr/patrimoine/patrimoine-urbain/le-classement-des-villes-vertes-en-france-8111</a>
-            <a href="/fr/espoir_fr.html">Article suivant : "Sauvez la planète"</a>
+            </div>
+            
+            <p class="lieu_article_texte_content">Article suivant : "Sauvez la planète"</p>
+            <div class="lieu_article_texte_content_center">
+            <a class="lieu_article_texte_content_center" href="/fr/espoir_fr.html">Cliquez ici</a>
+            </div>
         </article>
     </main>
     <footer>
